--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/home.css" />
+    <link rel="stylesheet" href="home.css" />
   </head>
   <body>
     <nav>
@@ -87,8 +87,8 @@
             </div>
         </div>
     </section>
-    <script src="/data.js"  type="module"></script>
-    <script src="/home.js"  type="module"></script>
+    <script src="data.js"  type="module"></script>
+    <script src="home.js"  type="module"></script>
     
   </body>
 </html>
